# alexa-cookidoo-shopping-list-skill

./: .env.example  .gitignore  Cargo.toml  PROJECT.md  README.md
.github/workflows/: ci.yml  deploy.yml
cdk/: .npmignore  cdk.json  package-lock.json  package.json  tsconfig.json
cdk/lib/: alexa-skill-stack.ts
skill/: Cargo.toml
skill/src/: adapters.rs  application.rs  lib.rs  main.rs
skill/src/adapters/: alexa.rs  cookidoo.rs  logging.rs
skill/src/adapters/alexa/: handler.rs  intent_parser.rs  models.rs  response_builder.rs
skill/src/adapters/cookidoo/: auth.rs  client.rs  error.rs  models.rs  shopping_list.rs  token_cache.rs
skill/src/adapters/logging/: setup.rs
skill/src/application/: config.rs  dependency_injection.rs  lambda_handler.rs
skill/src/domain/: models.rs  ports.rs  services.rs
skill/src/domain/models/: auth.rs  error.rs  shopping_list_item.rs
skill/src/domain/ports/: authentication_service.rs  shopping_list_repository.rs
skill/src/domain/services/: add_item_service.rs
skill/tests/: alexa_integration.rs  cookidoo_integration.rs
skill/tests/fixtures/: add_item_empty_slot_request.json  add_item_request.json  cookidoo_add_item_success.json  cookidoo_auth_error.json  cookidoo_auth_success.json  help_request.json  launch_request.json  stop_request.json
